test/Fail/Invalid-polarity.agda
postulate
  F : Set → Set

{-# POLARITY F ⚄ #-}
