test/Fail/Invalid-polarity.err
Invalid-polarity.agda:4.18: error: [ParseError]
Not a valid polarity: ⚄
